Add config string placeholders.

--- a/IGXService/App.config
+++ b/IGXService/App.config
@@ -2,8 +2,10 @@
 <configuration>
   <appSettings>
     <add key="SQLConnectionString" value="" />
-    <add key="ContentStoreConnectionString" value="" />
 		<add key="SQLCommand" value="" />
+    <add key="ContentStoreConnectionString" value="" />
+		<add key="XmlPath" value="" />
+		<add key="OperatingUserId" value="" />
 	</appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
