Add commented session example.

--- a/IGXActions/IGXActions.csproj
+++ b/IGXActions/IGXActions.csproj
@@ -48,6 +48,9 @@
     <Reference Include="Lucene.Net">
       <HintPath>igxdlls\Lucene.Net.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Owin">
+      <HintPath>igxdlls\Microsoft.Owin.dll</HintPath>
+    </Reference>
     <Reference Include="MoreLinq, Version=1.4.18916.0, Culture=neutral, PublicKeyToken=384d532d7e88985d, processorArchitecture=MSIL">
       <HintPath>..\packages\morelinq.1.4.0\lib\net35\MoreLinq.dll</HintPath>
       <Private>True</Private>
